--- a/1407.0707/fermionEE.tex
+++ b/1407.0707/fermionEE.tex
@@ -1,5 +1,4 @@
-\documentclass[twocolumn,english,prl,showpacs]{revtex4}
-\usepackage[colorlinks=true,urlcolor=blue,citecolor=blue,linkcolor=blue]{hyperref}
+\documentclass[12pt,onecolumn,english,prl,showpacs,nofootinbib]{revtex4-1}
 \usepackage[T1]{fontenc}
 \usepackage[latin9]{inputenc}
 \usepackage{amssymb}
@@ -12,10 +11,41 @@
 \usepackage{subfigure}
 \DeclareMathOperator{\Tr}{Tr}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+%\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \newcommand{\red}[1]{[{\bf \color{red}{#1}}]}
 %\newcommand{\red}[1]{}
 
-\makeatletter
 
 \usepackage{tikz}
 \usetikzlibrary{arrows}
@@ -41,8 +71,11 @@ We present a new algorithm for calculating the Renyi entanglement entropy of int
 
 \maketitle
 
+\pagestyle{plain}
+
 %\paragraph{Introduction}
 %background 
+\noindent
 We have entered an information age of condensed matter physics. Many information theoretical tools have been used to identify exotic phases and phase transitions~\cite{Feiguin:2007bo, PhysRevLett.99.140405, Isakov:2011fz, Jiang:2012dw, PhysRevLett.109.067201}. These tools are especially useful when a conventional local order parameter characterization fails, e.g. in the case of topological order~\cite{Wen:1990tm}. The reduced density matrix $\hat{\rho}_{A}$ plays a central role in this quantum information perspective. It contains all the information about a subregion A when viewing the remaining part of the system as environment. The entanglement entropy (EE) quantitatively measures the entanglement between the subregion A and its environment. The rank-$n$ Renyi EE, in particular, reads
 
 \begin{equation}
@@ -83,7 +116,7 @@ S_{n}^{0}  & =& \frac{1}{1-n} \ln\left(\frac{\mathcal{Z}_{0}^{A}}{\mathcal{Z}_{0
 \Delta S_{n} & = & \frac{1}{1-n} \left\{ \ln\left[\eta \frac{\mathcal{Z}^{A}/\mathcal{Z}_{0}^{A}}{ (\mathcal{Z}/ \mathcal{Z}_{0}  )^{n}}\right] - \ln(\eta) \right\}.    
 \label{eq:dS2}
 \end{eqnarray}
-$\mathcal{Z}_{0}$ and $\mathcal{Z}_{0}^{A}$ are the noninteracting counterparts of $\mathcal{Z}$ and $\mathcal{Z}^{A}$~\footnote{In general one can choose $\mathcal{Z}_{0}$ and $\mathcal{Z}^{A}_{0}$ as partition functions of any quadratic Hamiltonian. It amounts to redefine the reference Hamiltonian around which one performs the interaction expansion. A particular useful example is to expand around a mean-field Hamiltonian and the resulting $\Delta S_{n}$ will be the entanglement entropy difference to a mean-field state. Employing this trick will further improve efficiency of our algorithm, especially in the long-range-ordered phase. We thank Fakher Assaad for pointing this out to us.}. $S_{n}^{0} $ is the Renyi EE of noninteracting fermions and can be calculated easily using the correlation matrix method~\cite{Peschel:2002gz, SM}. Eq.~(\ref{eq:dS2}) describes the \emph{interaction corrections} to the Renyi EE which is presumably much smaller than $S_{n}^{0}$ for weakly interacting systems. We use Monte Carlo (MC) sampling to calculate the quantity in the square bracket of Eq.~(\ref{eq:dS2}), where we have introduced a free parameter $\eta$ to further control the MC dynamics. For an optimal choice of $\eta$ the sampled quantity in the square bracket is close to one and  $\frac{-1}{1-n}\ln(\eta)$ will contribute mostly to $\Delta S_{n}$. The fact that MC sampling corrects an educated guess is another appealing feature of the present algorithm. In practice, $\eta$ can be determined from a rough estimate of $\Delta S_{n}$ (either based on existing theory of EE scaling laws or in the MC equilibration steps). MC sampling will correct the estimate and restore the exact result no matter what the initial choice of $\eta$ was. 
+$\mathcal{Z}_{0}$ and $\mathcal{Z}_{0}^{A}$ are the noninteracting counterparts of $\mathcal{Z}$ and $\mathcal{Z}^{A}$.\footnote{In general one can choose $\mathcal{Z}_{0}$ and $\mathcal{Z}^{A}_{0}$ as partition functions of any quadratic Hamiltonian. It amounts to redefining the reference Hamiltonian around which one performs the interaction expansion. A particular useful example is to expand around a mean-field Hamiltonian and the resulting $\Delta S_{n}$ will be the entanglement entropy difference to a mean-field state. Employing this trick will further improve efficiency of our algorithm, especially in the long-range-ordered phase. We thank Fakher Assaad for pointing this out to us.} $S_{n}^{0} $ is the Renyi EE of noninteracting fermions and can be calculated easily using the correlation matrix method~\cite{Peschel:2002gz, SM}. Eq.~(\ref{eq:dS2}) describes the \emph{interaction corrections} to the Renyi EE which is presumably much smaller than $S_{n}^{0}$ for weakly interacting systems. We use Monte Carlo (MC) sampling to calculate the quantity in the square bracket of Eq.~(\ref{eq:dS2}), where we have introduced a free parameter $\eta$ to further control the MC dynamics. For an optimal choice of $\eta$ the sampled quantity in the square bracket is close to one and  $\frac{-1}{1-n}\ln(\eta)$ will contribute mostly to $\Delta S_{n}$. The fact that MC sampling corrects an educated guess is another appealing feature of the present algorithm. In practice, $\eta$ can be determined from a rough estimate of $\Delta S_{n}$ (either based on existing theory of EE scaling laws or in the MC equilibration steps). MC sampling will correct the estimate and restore the exact result no matter what the initial choice of $\eta$ was. 
 
 \begin{figure}[t]
   \centering
@@ -159,9 +192,11 @@ In the CTQMC method, the partition function ratios are expanded in terms of the 
 \begin{widetext}
 \begin{eqnarray}
 \eta \frac{\mathcal{Z}^{A}}{\mathcal{Z}_{0}^{A}}  & =& \eta \sum_{k=0}^{\infty} 
-\frac{(-V)^{k}}{k!} \int_{0}^{2\beta}\mathrm{d} \tau_{2} \int_{0}^{2\beta}\mathrm{d} \tau_{4}  \ldots \int_{0}^{2\beta} \mathrm{d}\tau_{2k}   \det\left(G^{k}_{\mathcal{Z}^{A}}\right) \label{eq:ZAoverZA0}  =  \sum_{k}\sum_{\mathcal{C}^{k}} w_{\mathcal{Z}^{A}}(\mathcal{C}^{k}), \\   
+\frac{(-V)^{k}}{k!} \int_{0}^{2\beta}\mathrm{d} \tau_{2} \int_{0}^{2\beta}\mathrm{d} \tau_{4}  \ldots \int_{0}^{2\beta} \mathrm{d}\tau_{2k}   \det\left(G^{k}_{\mathcal{Z}^{A}}\right) \label{eq:ZAoverZA0}  \nonumber\\ 
+&=&  \sum_{k}\sum_{\mathcal{C}^{k}} w_{\mathcal{Z}^{A}}(\mathcal{C}^{k}), \\   
 \left(\frac{\mathcal{Z}}{\mathcal{Z}_{0}}\right)^{2} & =& \sum_{k_{1}=0}^{\infty} \sum_{k_{2}=0}^{\infty} 
-\frac{(-V)^{k_{1}+k_{2}}}{k_{1}!k_{2}!}  \int_{0}^{\beta} \mathrm{d}\tau_{2} \ldots \int_{0}^{\beta} \mathrm{d}\tau_{2k_{1}} \det(G_{\mathcal{Z}}^{k_{1}}) \, \int_{\beta}^{2\beta} \mathrm{d}\tau_{2k_{1}+2} \ldots \int_{\beta}^{2\beta} \mathrm{d}\tau_{2k_{1}+2k_{2}}\det{(G_{\mathcal{Z}}^{k_{2}})} \nonumber \\& =& \sum_{k_{1},k_{2}}\sum_{\mathcal{C}^{k_{1}+k_{2}}} w_{\mathcal{Z}^{2}}(\mathcal{C}^{k_{1}+k_{2}}).
+\frac{(-V)^{k_{1}+k_{2}}}{k_{1}!k_{2}!}  \int_{0}^{\beta} \mathrm{d}\tau_{2} \ldots \quad\int_{0}^{\beta} \mathrm{d}\tau_{2k_{1}} \det(G_{\mathcal{Z}}^{k_{1}}) \nonumber\\
+&& \quad \int_{\beta}^{2\beta} \mathrm{d}\tau_{2k_{1}+2} \ldots \int_{\beta}^{2\beta} \mathrm{d}\tau_{2k_{1}+2k_{2}}\det{(G_{\mathcal{Z}}^{k_{2}})} \nonumber \\& =& \sum_{k_{1},k_{2}}\sum_{\mathcal{C}^{k_{1}+k_{2}}} w_{\mathcal{Z}^{2}}(\mathcal{C}^{k_{1}+k_{2}}).
 \label{eq:ZoverZ0}
 \end{eqnarray}
 \end{widetext}
@@ -224,7 +259,7 @@ Fig.~\ref{fig:1dbenchmark} shows benchmark results of Renyi EE of an $8$-site ch
 %The inset of Fig.~\ref{fig:1dbenchmark} shows the perturbation orders in the $\mathcal{Z}^{A}$ and $\mathcal{Z}^{2}$ ensembles. The fact that they coincident within a wide range of temperature and interaction strength allows efficient switch between the two ensembles. 
 
 %Ratio-trick 
-Although the above algorithm can already handle a large class of interesting problems, it will suffer from very low transition probability when the two ensembles $\mathcal{Z}^{A}$ and $\mathcal{Z}^{2}$ have vanishing small overlap in configurational space (for example if their average perturbation order differs substantially). To achieve better performance, we additionally employ the ratio method ~\cite{Hastings:2010dca, Humeniuk:2012cq} and split the partition function ratio into products of a series of intermediate ratios, each one corresponds to two ensembles where the size of region A only differs by a small amount of sites~\footnote{In the case the weight Eq.~(\ref{eq:Z2weight}) is replaced by Eq.~(\ref{eq:ZAweight}) with a different subregion A}. Because $\Delta S_{2}$ can be much smaller than  the total entanglement entropy $S_{2}$, we need far less intermediate ratios compare to the other approach~\cite{Broecker:2014ud} to achieve accurate results. 
+Although the above algorithm can already handle a large class of interesting problems, it will suffer from very low transition probability when the two ensembles $\mathcal{Z}^{A}$ and $\mathcal{Z}^{2}$ have vanishing small overlap in configurational space (for example if their average perturbation order differs substantially). To achieve better performance, we additionally employ the ratio method ~\cite{Hastings:2010dca, Humeniuk:2012cq} and split the partition function ratio into products of a series of intermediate ratios, each one corresponds to two ensembles where the size of region A only differs by a small amount of sites\footnote{In the case the weight Eq.~(\ref{eq:Z2weight}) is replaced by Eq.~(\ref{eq:ZAweight}) with a different subregion A}. Because $\Delta S_{2}$ can be much smaller than  the total entanglement entropy $S_{2}$, we need far less intermediate ratios compare to the other approach~\cite{Broecker:2014ud} to achieve accurate results. 
 
 %Wang-Landau 
 %To optimize we 
@@ -268,7 +303,7 @@ Although the above algorithm can already handle a large class of interesting pro
 
 Our method is efficient for simulating~\emph{highly entangled} systems because it samples the difference of entanglement entropy to that of the free fermions. For obvious application like weakly interacting fermions, the algorithm enjoys additional advantage of dealing with small average expansion order, which is proportional to the interaction energy~\cite{Rubtsov:2005iw, Gull:2011jd}. 
 
-We will demonstrate the power of our method with a more challenging example, where interaction turns the free fermions state into another phase which follows different entanglement entropy scaling. We consider the model (\ref{eq:Ham}) on a square lattice at half-filling \cite{PhysRevB.29.5253, Gubernatis:1985wo}. At zero temperate it has CDW ground state for arbitrary weak repulsive interaction because of Fermi surface nesting. The CDW ground state in the strong coupling limit can be interpreted as an  ``antiferromagnetic Ising'' ground state of a classical lattice gas. Upon increasing the temperature, the CDW state undergoes an Ising phase transition. The transition temperature is exponentially small in the weak coupling limit and is proportional to the interaction strength $V$ in the strong coupling limit.  Figure 20 of Ref.\cite{Gubernatis:1985wo} reports the $T-V$ phase diagram of this model. 
+We will demonstrate the power of our method with a more challenging example, where interaction turns the free fermions state into another phase which follows different entanglement entropy scaling. We consider the model (\ref{eq:Ham}) on a square lattice at half-filling \cite{PhysRevB.29.5253, Gubernatis:1985wo}. At zero temperate it has CDW ground state for arbitrary weak repulsive interaction because of Fermi surface nesting. The CDW ground state in the strong coupling limit can be interpreted as an  ``antiferromagnetic Ising'' ground state of a classical lattice gas. Upon increasing the temperature, the CDW state undergoes an Ising phase transition. The transition temperature is exponentially small in the weak coupling limit and is proportional to the interaction strength $V$ in the strong coupling limit.  Figure 20 of Ref. \cite{Gubernatis:1985wo} reports the $T-V$ phase diagram of this model. 
 
 \begin{figure}[t]
 \centering
@@ -285,7 +320,7 @@ We next proceed to a quantitative determination of the phase boundaries. We cons
 I_{2}(A:B) = S_{2}(\hat{\rho}_{A}) + S_{2}(\hat{\rho}_{B}) - S_{2}(\hat{\rho}_{A\cup B}) 
 \label{eq:MI}
 \end{equation} 
-which cancels the bulk contribution in $S_{2}$ and exhibits boundary law even at nonzero temperature. Studies of classical and quantum spin models~\cite{Melko:2010jda, PhysRevLett.106.135701,  Iaconis:2013jz, PhysRevE.89.012125} show that the scaled mutual information $I_{2}/\ell_{A}$ crosses around the transition point. We consider a region A with $N_{A}=L^{2}/2$ and the mutual information can be directly calculated using two data points of $S_{2}$ in the Fig.\ref{fig:scanNA}. 
+which cancels the bulk contribution in $S_{2}$ and exhibits boundary law even at nonzero temperature. Studies of classical and quantum spin models~\cite{Melko:2010jda, PhysRevLett.106.135701,  Iaconis:2013jz, PhysRevE.89.012125} show that the scaled mutual information $I_{2}/\ell_{A}$ crosses around the transition point. We consider a region A with $N_{A}=L^{2}/2$ and the mutual information can be directly calculated using two data points of $S_{2}$ in the Fig.~\ref{fig:scanNA}. 
 
 Figure~\ref{fig:MI} shows the scaled mutual information versus interaction strength and temperature for several system sizes. The crossing points of $I_{2}/\ell_{A}$ provide an estimation of transition point $V_{c}\in[1.2, 1.3]$ at $T=0.5t$ or $T_{c}\in[0.9, 1.0]$ at $V=2t$, which is consistent with the phase diagram reported in~\cite{Gubernatis:1985wo}. Similar to the case of Ref.~\cite{Melko:2010jda, Iaconis:2013jz}, the curves of mutual information also cross around $2T_{c}$ (not shown). These results indicate that our approach can be a versatile tool to calculate the Renyi EE and detect phase transitions in the interacting fermionic models.  
 
