--- a/1407.0707/fermionEE.tex
+++ b/1407.0707/fermionEE.tex
@@ -29,13 +29,14 @@ bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
-\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 
 % these include amsmath and that can cause trouble in older docs.
 %\input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
+\input{../helpers/cmrsum}
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
@@ -207,15 +208,12 @@ w_{\mathcal{Z}^{2}}(\mathcal{C}^{k}) &= & (-V)^{k} \det(G^{k_{1}}_{\mathcal{Z}})
 \end{eqnarray}
 where $G^{k}_{\mathcal{Z}^{A}}$ and $G_{\mathcal{Z}}^{k_{1(2)}}$ are $2k\times 2k$ and $2k_{1(2)}\times 2k_{1(2)}$ matrices whose matrix elements only depend on the noninteracting Green's functions~\cite{SM}. On a bipartite lattice with repulsive interaction $V>0$ the weights are positive~\cite{Huffman:2014fj, CTQMCpaper} and there is no sign problem in the Monte Carlo simulation. 
 
-
 We introduce an ensemble flag $\mathbb{X}\in \{\mathcal{Z}^{A}, \mathcal{Z}^{2}\}$ and perform MC simulation in an extended ensemble \cite{Burovski:2006hv, Humeniuk:2012cq} with the partition function $(\mathcal{Z}/\mathcal{Z}_{0})^{2} + \eta (\mathcal{Z}^{A}/\mathcal{Z}_{0}^{A}) = \sum_{\mathbb{X}}\sum_{k, \mathcal{C}^{k}}w_\mathbb{X} (\mathcal{C}^{k})$. Now a MC configuration corresponds to a given set of variables: the ensemble flag $\mathbb{X}$, the perturbation order $k$ and the vertex configurations. Two kinds of MC updates are necessary to ensure ergodicity of the sampling, shown in Fig.{\ref{fig:concepts}}(b). First, we keep the ensemble flag $\mathbb{X}$ unchanged and update the vertex configuration by either adding or removing one vertex. This is done either by proposing a candidate vertex at a random time (in the interval $[0, 2\beta)$) and a random bond (out of $N_{b}$ possible ones) or randomly choosing an existing vertex (out of $k$ possible ones) to be removed. The acceptance ratios are
-
 \begin{eqnarray}
 R_{\{\mathbb{X}, \mathcal{C}^{k}\}\rightarrow \{\mathbb{X}, \mathcal{C}^{k+1}\}} & =&  \frac{2\beta  N_{b}}{k+1} \frac{w_\mathbb{X}(\mathcal{C}^{k+1})}{w_\mathbb{X}(\mathcal{C}^{k})} \label{eq:add} \\
 R_{\{\mathbb{X}, \mathcal{C}^{k}\}\rightarrow \{\mathbb{X}, \mathcal{C}^{k-1}\}} & =&  \frac{k}{2\beta  N_{b}} \frac{w_\mathbb{X}(\mathcal{C}^{k-1})}{w_\mathbb{X}(\mathcal{C}^{k})} \label{eq:remove}
 \end{eqnarray}
 The second class of MC updates switch the ensemble $\mathbb{X}$ to $\mathbb{X}^{\prime}$ while keeping the configuration $\mathcal{C}^{k}$ fixed. The acceptance probability is
-
 \begin{eqnarray}
 R_{\{\mathbb{X}, \mathcal{C}^{k}\} \rightarrow \{\mathbb{X}^{\prime}, \mathcal{C}^{k}\} } = {w_{\mathbb{X}^{\prime}}(\mathcal{C}^{k})}/{w_{\mathbb{X}}(\mathcal{C}^{k})}
 \label{eq:switch}
@@ -223,7 +221,6 @@ R_{\{\mathbb{X}, \mathcal{C}^{k}\} \rightarrow \{\mathbb{X}^{\prime}, \mathcal{C
 A direct evaluation of $R_{\{\mathbb{X}, \mathcal{C}^{k}\} \rightarrow \{\mathbb{X}^{\prime}, \mathcal{C}^{k}\}}$ is numerically expensive and unstable, since it requires the calculation of two determinants Eq.~(\ref{eq:ZAweight}) and Eq.~(\ref{eq:Z2weight}) and their ratio. We utilize the fact that the determinant ratio of the zeroth expansion order is one and keep updating the ratio Eq.~(\ref{eq:switch}) during the MC updates. Therefore the ensemble switch can then be implemented without any matrix operations and is very cheap. 
 
 The relative time spent in each ensemble~\cite{Humeniuk:2012cq}  provides an estimator of the ratio between Eq.~(\ref{eq:ZAoverZA0}) and Eq.~(\ref{eq:ZoverZ0}), thus 
-
 \begin{equation}
 \Delta S_{2} = -\ln\left [\frac{\langle \delta_{\mathbb{X},\mathcal{Z}^{A}} \rangle_\mathrm{MC}}{ \langle \delta _{\mathbb{X}, \mathcal{Z}^{2}} \rangle_\mathrm{MC}} \right ] + \ln(\eta).
 \label{eq:estimator}
