--- a/0905.2562v3/review3.tex
+++ b/0905.2562v3/review3.tex
@@ -1,12 +1,42 @@
-\documentclass[a4paper]{article}
+\documentclass[11pt]{article}
 \usepackage[]{amsmath,amssymb}
 \usepackage{graphics,epsfig}
 
-\textheight=23.9cm
-\textwidth=16.2cm
-\voffset=-2.2cm
-\hoffset=-2.cm
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\def\nn{\nonumber}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \begin{document}
 \date{}
 \title{Entanglement entropy in free quantum field theory}
@@ -19,6 +49,8 @@ M. Huerta\footnote{e-mail: marina.huerta@cab.cnea.gov.ar} \\
 \begin{abstract}
 In this review we first introduce the general methods to calculate the entanglement entropy for free fields, within the Euclidean and the real time formalisms.  Then we describe the particular examples which have been worked out explicitly in two, three and more dimensions. 
 \end{abstract}
+
+\newpage
 \tableofcontents
 \newpage
 \section{Introduction}
@@ -101,9 +133,10 @@ In the Euclidean approach one starts from the representation of the vacuum state
 \end{equation} 
 In order to select the vacuum state, the functional integral is over the lower half space and with Euclidean time. $S_E(\phi)$ is the Euclidean action and $N^{-1/2}$ is a normalization factor. The vacuum density matrix in this basis is
 $\rho(\alpha,\alpha^\prime)=\left<\alpha | 0\right> \left< 0| \alpha^\prime\right>=\Phi(\alpha)^*\Phi(\alpha^\prime)$. In order to trace over degrees of freedom in $-V$, the set complementary to $V$, one considers functions $\alpha=\beta \oplus \alpha_{V}$, $\alpha^\prime=\beta\oplus \alpha^\prime_{V}$, which coincide (are equal to $\beta$) on $-V$, and sum over all possible functions $\beta$. Using the representation (\ref{qs}) this construction of the reduced density matrix amounts to take two copies of the half space, glue them on $-V$ (see figure \ref{figu1}), and take the functional integral in this space \cite{ci},
-\begin{equation}
-\rho_V(\alpha_{V},\alpha^\prime_{V})=\int D\beta\,\, \Phi(\beta \oplus \alpha_{V})^* \Phi(\beta\oplus \alpha^\prime_{V})= N^{-1}\int_{\phi(\vec{x},0^-)=\alpha^\prime_V(\vec{x}),\, x\in V }^{\phi(\vec{x},0^+)=\alpha_V(\vec{x}),\,x\in V} D\phi\,\, e^{-S_E(\phi)}\,. \label{opre}
-\end{equation}
+\begin{align}
+\rho_V(\alpha_{V},\alpha^\prime_{V})&=\int D\beta\,\, \Phi(\beta \oplus \alpha_{V})^* \Phi(\beta\oplus \alpha^\prime_{V})\nonumber\\ 
+&= N^{-1}\int_{\phi(\vec{x},0^-)=\alpha^\prime_V(\vec{x}),\, x\in V }^{\phi(\vec{x},0^+)=\alpha_V(\vec{x}),\,x\in V} D\phi\,\, e^{-S_E(\phi)}\,. \label{opre}
+\end{align}
 The arguments of the density matrix are the boundary conditions of the path integral on both sides of the cut on $V$. 
 
 For fermions a similar construction holds, but there is an important difference. Since the fields at equal time anticommute, the functional integral and the boundary conditions are in terms of  Grassmann variables. In order to represent the trace in the functional integral we have to sum over the antidiagonal elements \cite{klein}, that is  
@@ -574,8 +607,9 @@ The expression for the entropy in the Euclidean approach can be directly transfo
 
 Let us start with the Dirac field. The boundary condition in $Z[\lambda]$ , with $\lambda=e^{i 2 \pi a}$, is taken into account with the modified action $S[\bar{\Psi},\Psi]=S_0[\bar{\Psi},\Psi]+\delta S_V[\bar{\Psi},\Psi]$, where 
 \begin{eqnarray}
-S_0[\bar{\Psi},\Psi]&=&\int dx^{d+1}\,\bar{\Psi} (\gamma^\mu \partial_\mu + m) \Psi \,,\\
-\delta S_V&=& \int dx^{d+1}\, (1-\lambda) \delta(\tau)\chi_V(\vec{x}) \bar{\Psi}(x) \gamma^0\Psi(x)= (1-\lambda) \int_V dx^d\, \bar{\Psi}\gamma^0 \Psi \,,
+S_0[\bar{\Psi},\Psi]&=&\int dx^{d+1}\,\bar{\Psi} (\gamma^\mu \partial_\mu + m) \Psi \,,\nn\\
+\delta S_V&=& \int dx^{d+1}\, (1-\lambda) \delta(\tau)\chi_V(\vec{x}) \bar{\Psi}(x) \gamma^0\Psi(x)\nn\\
+&=& (1-\lambda) \int_V dx^d\, \bar{\Psi}\gamma^0 \Psi \,,
 \label{86}
 \end{eqnarray}
 where $\tau$ is the Euclidean time coordinate,  $\chi_V(\vec{x})$ equal to one for $\vec{x}\in V$ and $0$ outside, and the last integral over the spatial $d$ dimensional set $V$.  This is because this new action leads to the same classical solutions and boundary conditions as the original problem. It is also possible to understand the term $\delta S_V$ as produced by an external gauge field vanishing outside  $V$, which is pure gauge everywhere except at $\partial V$, and which has the effect of imposing the correct boundary conditions (see section 3.1.5).
@@ -595,18 +629,23 @@ We can choose $f_\lambda=\lambda^{-1/2}$ in order to have $Z[1]=1$, and $Z[\lamb
 
 
 The boundary condition for the scalar partition function can be similarly implemented by adding a term to the  first order action, 
-\begin{equation}
-S[\phi,\pi]=\int dx^{d+1} \left(\pi\dot{\phi}^*+\pi^*\dot{\phi}-\left(\pi \pi^*+\nabla\phi \nabla \phi^*+m^2 \phi \,\phi^*\right)\right)+\int_V dx^d ((1-\lambda) \phi\, \pi^*+(1-\lambda^{-1}) \phi^*\, \pi)\,.
-\end{equation}    
+\begin{multline}
+S[\phi,\pi]=\int dx^{d+1} \left(\pi\dot{\phi}^*+\pi^*\dot{\phi}-\left(\pi \pi^*+\nabla\phi \nabla \phi^*+m^2 \phi \,\phi^*\right)\right)+\\
+\int_V dx^d ((1-\lambda) \phi\, \pi^*+(1-\lambda^{-1}) \phi^*\, \pi)\,.
+\end{multline}    
 Here $\lambda$ is again a phase factor.    
 Writing the corresponding partition function in terms of auxiliary fields living on $V$, we get
- \begin{equation}
- Z[\lambda]=\int {\cal D}\pi^*{\cal D}\pi{\cal D}\phi^*{\cal D}\phi{\cal D}\xi_1^* {\cal D}\xi_1{\cal D}\xi_2^* {\cal D}\xi_2\,\, e^{-S_0[\pi,\phi]+\int_V dx^d\, (\pi^* \xi_1 +\xi_2^* \phi +\pi \xi_1^* +\xi_2 \phi^* +\frac{1}{1-\lambda} \xi_2^* \xi_1+\frac{1}{1-\lambda^{-1}} \xi_2 \xi_1^*)}\,.
- \label{nio}\end{equation}
+ \begin{multline}
+ Z[\lambda]=\int {\cal D}\pi^*{\cal D}\pi{\cal D}\phi^*{\cal D}\phi{\cal D}\xi_1^* {\cal D}\xi_1{\cal D}\xi_2^* {\cal D}\xi_2\,\, \times \\
+ \times e^{-S_0[\pi,\phi]+\int_V dx^d\, (\pi^* \xi_1 +\xi_2^* \phi +\pi \xi_1^* +\xi_2 \phi^* +\frac{1}{1-\lambda} \xi_2^* \xi_1+\frac{1}{1-\lambda^{-1}} \xi_2 \xi_1^*)}\,.
+ \label{nio}\end{multline}
 We can now integrate over $\pi$ and $\phi$ first, giving
-\begin{eqnarray}
- && Z[\lambda]=\int {\cal D}\xi_1^* {\cal D}\xi_1{\cal D}\xi_2^* {\cal D}\xi_2\,\, \exp\left(\int_V dx^d \, dy^d\,( \xi_1^*(x)\langle\pi(x)\pi^*(y) \rangle_E \xi_1(y)+\xi_2^*(x)\langle\phi(x)\phi^*(y) \rangle_E \xi_2(y)\right.  \label{twq}\\ &&+\left.(\xi_1^*(x)\langle\pi(x)\phi^*(y)\rangle_E\xi_2(y)+\textrm{h.c.})+\int_V dx^d \,(\frac{\xi_2^* \xi_1}{1-\lambda} +\frac{\xi_2 \xi_1^*}{1-\lambda^{-1}}) \right)= \textrm{det}^{-1}\left(f_\lambda\left(1- \frac{4(1-\lambda)^2}{(1+\lambda)^2}C^2\right)\right)\,,\nonumber
-\end{eqnarray}
+\begin{align}
+ Z[\lambda] & =\int {\cal D}\xi_1^* {\cal D}\xi_1{\cal D}\xi_2^* {\cal D}\xi_2\,\, \exp\left(\int_V dx^d \, dy^d\,( \xi_1^*(x)\langle\pi(x)\pi^*(y) \rangle_E \xi_1(y)\right. \nn\\
+& \qquad\qquad +\xi_2^*(x)\langle\phi(x)\phi^*(y) \rangle_E \xi_2(y)  \label{twq} + \left.(\xi_1^*(x)\langle\pi(x)\phi^*(y)\rangle_E\xi_2(y) \right.\nn\\
+& \qquad \qquad + \left.\textrm{h.c.})+\int_V dx^d \,(\frac{\xi_2^* \xi_1}{1-\lambda} +\frac{\xi_2 \xi_1^*}{1-\lambda^{-1}}) \right) \nn\\
+ &= \textrm{det}^{-1}\left(f_\lambda\left(1- \frac{4(1-\lambda)^2}{(1+\lambda)^2}C^2\right)\right)\,,
+\end{align}
 where $C=\sqrt{XP}$, with $X$ and $P$ the operators with kernel given respectively by the Minkowskian correlators $\langle\phi(x)\phi^*(y) \rangle=\langle\phi(x)\phi^*(y) \rangle_E$ and $\langle\pi(x)\pi^*(y) \rangle=-\langle\pi(x)\pi^*(y) \rangle_E$ restricted to $V$ (see section 2.2.1). We have also used $\langle\pi(x) \phi^*(y) \rangle_E=\langle\phi(x) \pi^*(y) \rangle_E=-1/2 \,\delta(x-y)$. When (\ref{twq}) is inserted in (\ref{boti}), it gives the correct formula for the entropy (\ref{for}), obtained with the real time formalism.  
 
 It follows from (\ref{pista}) and (\ref{twq}) and the spectral properties of the operator $C$ in each case, that the universal terms in $\log Z[\lambda]$ (disregarding a global constant independent of $C$) satisfy the conditions for $|\lambda|\rightarrow \infty$ which were assumed in section 2.1.3. 
@@ -885,9 +924,11 @@ Then
 (\Delta-m^2)(G_D(z,z^{\prime})-\mathbb I~m~G_S(z,z^{\prime}))=\begin{pmatrix}\delta(x-x^{\prime})\delta^{\prime}(y-y^{\prime})&\delta^{\prime}(x-x^{\prime})\delta(y-y^{\prime})\\\delta^{\prime}(x-x^{\prime})\delta(y-y^{\prime})&-\delta(x-x^{\prime})\delta^{\prime}(y-y^{\prime}) \end{pmatrix}\label{gsgd}\,,
 \end{equation}
 where we have used that
-\begin{eqnarray}
-(\Delta-m^2)G_D(z,z^{\prime})&=&(\partial_{\mu}\gamma_{\mu}-m)(\partial_{\mu}\gamma_{\mu}+m)G_D(z,z^{\prime})\nonumber\\&=&\gamma^1 \delta^{\prime}(x-x^{\prime})\delta(y-y^{\prime})+\gamma^2 \delta(x-x^{\prime})\delta^{\prime}(y-y^{\prime})-m\delta(x-x^{\prime})\delta(y-y^{\prime})\,.
-\end{eqnarray}
+\begin{align}
+(\Delta-m^2)G_D(z,z^{\prime})&=(\partial_{\mu}\gamma_{\mu}-m)(\partial_{\mu}\gamma_{\mu}+m)G_D(z,z^{\prime})\nonumber\\
+&=\gamma^1 \delta^{\prime}(x-x^{\prime})\delta(y-y^{\prime})+\gamma^2 \delta(x-x^{\prime})\delta^{\prime}(y-y^{\prime})- \nn\\
+& \quad - m\delta(x-x^{\prime})\delta(y-y^{\prime})\,.
+\end{align}
  
 
 \begin{figure} [tbp]
@@ -978,12 +1019,11 @@ v_{a }(t)=\sum_{m=0}^{\infty }t^{2m}\sum_{n=0}^{2m+1}f_{m,n}\log
 The full expansion requires only the knowledge of the constant term $
 f_{0,0}=\kappa_D$. The first terms read
 \begin{eqnarray}
-v_{a }(t) &=&-2 a \log (t)+\kappa_D+t^{2}\left( \frac{1}{4}\left( 2 a
--8 a ^{3}+\kappa_D-8 a ^{2}\kappa_D-4 a \kappa_D^{2}-\kappa_D^{3}\right) +\right.   
-\\
-&&+\frac{1}{2}\left( - a +8 a ^{3}+8 a ^{2}\kappa_D+3 a
-\kappa_D^{2}\right) \log (t) \left. +\left( -4 a ^{3}-3 a ^{2}\kappa_D\right) \log
-^{2}(t)+2 a ^{3}\log ^{3}(t)\right) +\mathcal{O}(t^{4}) \,.\nonumber 
+v_{a }(t) &=&-2 a \log (t)+\kappa_D+t^{2}\Bigl( \frac{1}{4}\left( 2 a
+-8 a ^{3}+\kappa_D-8 a ^{2}\kappa_D-4 a \kappa_D^{2}-\kappa_D^{3}\right) +\nn\\   
+&&+\,\frac{1}{2}\left( - a +8 a ^{3}+8 a ^{2}\kappa_D+3 a
+\kappa_D^{2}\right) \log (t) + \left( -4 a ^{3}-3 a ^{2}\kappa_D\right) \log^{2}(t)+ \nn\\
+&& + \, 2 a ^{3}\log ^{3}(t)\Bigr) +\mathcal{O}(t^{4}) \,.\nn 
 \end{eqnarray}
  The integration constant for $
 w_{a }$ is given by the conformal limit $w_{a
@@ -1022,12 +1062,12 @@ c_D&=&\int_0^{\infty}db \frac{\pi}{\sinh(\pi b)^2}w_{D}\,,\\
 c_S&=&\int_0^{\infty}db \frac{\pi}{\cosh(\pi b)^2}w_{S}\,,
 \end{eqnarray}
 where
-\begin{eqnarray}
-w_{(D,\,S)}&=&\int_{t}^{\infty}dy\,\,y\,\,u_{(D,\,S)}^{2}(y)  \,,\\
-u_{(D,\,S)}{^{\prime \prime }}+\frac{1}{t}u_{(D,\,S)}^{\prime} &=&\frac{
+\begin{align}
+w_{(D,\,S)}&=\int_{t}^{\infty}dy\,\,y\,\,u_{(D,\,S)}^{2}(y)  \,,\\
+u_{(D,\,S)}{^{\prime \prime }}+\frac{1}{t}u_{(D,\,S)}^{\prime} &=\frac{
 u_{(D,\,S)}}{1+u_{(D,\,S)}^{2}}\left( u_{(D,\,S)}^{\prime}\right)
 ^{2}+u_{(D,\,S)}\left( 1+u_{(D,\,S)}^{2}\right) -\frac{4b^{2}}{t^{2}}\frac{u_{(D,\,S)}}{1+u_{(D,\,S)}^{2}}\,. 
-\end{eqnarray}
+\end{align}
 The differences between the fermionic and scalar cases are exclusively due to the boundary conditions 
 \begin{eqnarray}
 u_D(t) &\rightarrow &\frac{2}{\pi} \sinh (b \pi) K_{i 2 b} (t)\,\,\,\,\,\,\,\, \textrm{as} \,\,\,\, t\rightarrow \infty \,\\
@@ -1250,10 +1290,11 @@ With this resolvent at hand we are in position to compute the entropy for the ma
 S_{m=0}(V)=-\frac{2}{\pi}\int^\infty_{1/2} d\beta\, \int_V dx\, \lim_{y\rightarrow x}  \frac{\sin\left[ \frac{1}{2\pi} \log\left(\frac{\beta-1/2}{\beta+1/2}\right)\, (z(x)-z(y)) \right]}{(\beta+1/2)\,(x-y)}\,.
 \end{equation}  
  Integrating over $\beta$ first, this gives
-\begin{eqnarray}
-S_{m=0}(V)&=&2\int_V dx\, \lim_{y\rightarrow x}  \frac{\frac{z(x)-z(y)}{2}\coth((z(x)-z(y))/2)-1}{(x-y)(z(x)-z(y))}=\frac{1}{6}\int_V dx\,\sum_{i=1}^n \left(\frac{1}{x-u_i}-\frac{1}{x-v_i}\right)\nonumber\\
-&\,&\hspace{1cm}=\frac{1}{3} \left( \sum_{i,j}\log|v_i-u_i|-\sum_{i<j} \log|u_i-u_j| -\sum_{i<j} \log|v_i-v_j|-n \log \epsilon \right)\,.\label{sesen}
-\end{eqnarray}
+\begin{align}
+S_{m=0}(V)&=2\int_V dx\, \lim_{y\rightarrow x}  \frac{\frac{z(x)-z(y)}{2}\coth((z(x)-z(y))/2)-1}{(x-y)(z(x)-z(y))}\nn\\
+& =\frac{1}{6}\int_V dx\,\sum_{i=1}^n \left(\frac{1}{x-u_i}-\frac{1}{x-v_i}\right)\nonumber\\
+& =\frac{1}{3} \left( \sum_{i,j}\log|v_i-u_i|-\sum_{i<j} \log|u_i-u_j| -\sum_{i<j} \log|v_i-v_j|-n \log \epsilon \right)\,.\label{sesen}
+\end{align}
  This corresponds to the eq. (\ref{popopo}) obtained with the Euclidean method \cite{fermion}.
 
 The short distance expansion of the correlator up to second order in the field mass is $C=C_0+C_1+C_2+...$ where
@@ -1262,10 +1303,11 @@ C_1 (x,y)&=&-\frac{m}{2\pi}\left(\gamma_E+\log\left(\frac{m|x-y|}{2}\right)\righ
 C_2 (x,y)&=&\frac{i m^2}{4\pi} (x-y) \left(\gamma_E -\frac{1}{2} +\log\left(\frac{m|x-y|}{2}\right) \right) \gamma^3\,.
 \end{eqnarray}
 The perturbative expansion of the resolvent for small mass is 
-\begin{equation}
-R_V(\beta)=R_V^0(\beta)-R_V^0(\beta)C_1 R_V^0(\beta)-R_V^0(\beta)C_2 R_V^0(\beta)+R_V^0(\beta)C_1 R_V^0(\beta)C_1 R_V^0(\beta)-...\,.
+\begin{multline}
+R_V(\beta)=R_V^0(\beta)-R_V^0(\beta)C_1 R_V^0(\beta)-R_V^0(\beta)C_2 R_V^0(\beta)+\\
+R_V^0(\beta)C_1 R_V^0(\beta)C_1 R_V^0(\beta)-...\,.
 \label{financiar}
-\end{equation}
+\end{multline}
 Using this in (\ref{fas}) we get (see \cite{futuro} for details)
 \begin{eqnarray}
 S(V)&=&S_{m=0}(V)-\frac{m^2 L_t^2}{6}  \log^2(m)+\log(m)\left(\frac{2\log(2)-2\gamma_E-1}{6} m^2 L_t^2\right. \\
@@ -1438,18 +1480,19 @@ b' &=& -2\,m\,\beta_1\,u\,\csc(x)\,\sin(x/2) - b\,a\,\csc(x)\,(1 + \cos(x)) \lab
 u'&=&-\frac{m}{2}\,\sec(x/2)\,(b\,\beta_2+ c\,\beta_1) + \frac{1}{2}\,u\,\tan \left(x/2 \right)\label{uprima} \,,
 \end{eqnarray}
 where $B_1$, $B_2$, $B_{12}$, $\beta_1$, $\beta_2$ are functions of $x$ given in terms of $H$, $X_1$, $X_2$, $c$, $b$, and $u$ by the following set of algebraic equations
-\begin{eqnarray}
+\begin{align}
 \frac{\cos(x/2)}{8 
-\pi a(1 - a)}&=&\sin(x/2)\,H - m \left(\beta_1\, X_2 + \beta_2\, X_1\right) + 2\,m\,\cos(x/2)\, u\, B_{12}\,,\label{29} \\
-\frac{\sin(x/2)}{8 \pi a(1 - a)}&=&-\cos(x/2)\,H - m\, \tan(x/2)\left(\beta_1 X_2 + \beta_2 X_1 \right) + 
-  m\,\sin(x/2)(b B_2 + c B_1) \,,\label{30}\\
-0&=& -m \sin(x/2)(c X_1
- -b X_2) + m \tan(x/2)(\beta_2 B_1- \beta_1 B_2)+(1-2a)\cos(x/2) B_{12}\,,\label{31}\\
-0&=&-4a(a - 1) - m^2(4 - 8\beta_1\beta_2 + b c + 3u^2) \nonumber\\&&\hspace{2cm}- 
-      4\cos(x)\left(a(a - 1) + m^2(u^2 + 1)\right) 
-      + m^2\cos(2x)(b\,c - u^2) \label{4a}\,,\\
-0&=&(2a - 1)u\cos(x/2)+m \tan(x/2)(\beta_1 c - b \beta_2)\,.\label{minuscula}
-\end{eqnarray}
+\pi a(1 - a)}&=\sin(x/2)\,H - m \left(\beta_1\, X_2 + \beta_2\, X_1\right) + 2\,m\,\cos(x/2)\, u\, B_{12}\,,\label{29} \\
+\frac{\sin(x/2)}{8 \pi a(1 - a)}&=-\cos(x/2)\,H - m\, \tan(x/2)\left(\beta_1 X_2 + \beta_2 X_1 \right) + \nn\\
+  & \quad \, + m\,\sin(x/2)(b B_2 + c B_1) \,,\label{30}\\
+0&= -m \sin(x/2)(c X_1
+ -b X_2) + m \tan(x/2)(\beta_2 B_1- \beta_1 B_2)+ \nn\\
+ & \quad \, + (1-2a)\cos(x/2) B_{12}\,,\label{31}\\
+0&=-4a(a - 1) - m^2(4 - 8\beta_1\beta_2 + b c + 3u^2) \times \nonumber\\
+& \quad  \, \times  4\cos(x)\left(a(a - 1) + m^2(u^2 + 1)\right) 
+      + m^2\cos(2x)(b\,c - u^2)\label{4a}\,,\\
+0&=(2a - 1)u\cos(x/2)+m \tan(x/2)(\beta_1 c - b \beta_2)\,.\label{minuscula}
+\end{align}
 The boundary conditions at $x\rightarrow\pi$ are
 \begin{eqnarray}
 H(\pi)&=&0\,,\\
@@ -1608,6 +1651,7 @@ The function $s_D$ is plotted in figure \ref{ryo} with some lattice results. Tab
 
 \begin{table}[t]
 \centering
+\small
 \begin{tabular}{|c|ccccccc|} \hline
  & $c^{(\pi)}_2$ & $c^{(\pi)}_4$ & $c^{(\pi)}_6$ & $c^{(\pi)}_8$ & $c_{-1}^{(0)}$ & $s(\pi/2)$ & $s(3/4 \pi)$   \\  \hline
 $s_S$ & $7.81253\, 10^{-3}$ & $5.45402 \,10^{-4}$ & $5.34656 \,10^{-5}$ & $5.40167 \,10^{-6}$ & $7.94 \, 10^{-2}$  & $0.02366$ & $0.005040$\\
@@ -1630,22 +1674,22 @@ $s_D$ & $7.81253 \,10^{-3}$ & $5.01426\, 10^{-4}$ & $4.81299\, 10^{-5}$ & $4.855
 \end{equation}
 We have set the lattice spacing to one. 
 The correlators (\ref{x}) and (\ref{p}) are  
-\begin{eqnarray}
-\langle \phi_{0,0}\phi_{i,j}\rangle &=&\frac{1}{8\pi^2}\int_{-\pi}^{\pi}dx \int_{-\pi}^{\pi}dy\frac{\cos(i x)\cos(j y)}{\sqrt{2
+\begin{align*}
+\langle \phi_{0,0}\phi_{i,j}\rangle &=\frac{1}{8\pi^2}\int_{-\pi}^{\pi}dx \int_{-\pi}^{\pi}dy\frac{\cos(i x)\cos(j y)}{\sqrt{2
 (1-\cos(x))+2
 (1-\cos(y)+m^2)}}\,, \\
-\langle \pi_{0,0}\pi_{i,j}\rangle &=& \frac{1}{8\pi^2}\int_{-\pi}^{\pi} dx\int_{-\pi}^{\pi}dy \cos(i x)\cos(j y)}{\sqrt{2
-(1-\cos(x))+2
-(1-\cos(y))+m^2}\,.
-\end{eqnarray}
+\langle \pi_{0,0}\pi_{i,j}\rangle &= \frac{1}{8\pi^2}\int_{-\pi}^{\pi} dx\int_{-\pi}^{\pi}dy \cos(i x)\cos(j y) \\
+&\qquad \sqrt{2 (1-\cos(x))+2 (1-\cos(y))+m^2}\,.\\
+\end{align*}
 
 \noindent
 \textbf{Dirac fermion}
 
 \noindent We take the lattice Hamiltonian for a Dirac fermion as
-\begin{equation}
-{\cal H}=\sum_{n,m} -\frac{i}{2}\left(\left(\Psi^\dagger_{m,n} \gamma^0\gamma^1(\Psi_{m+1,n}-\Psi_{m,n})+\Psi^\dagger_{m,n} \gamma^0\gamma^2(\Psi_{m,n+1}-\Psi_{m,n})\right)-h.c.\right)+m  \Psi_{m,n}^\dagger\gamma^0 \Psi_{m,n}\,. 
-\end{equation}
+\begin{multline}
+{\cal H}=\sum_{n,m} -\frac{i}{2}\left(\left(\Psi^\dagger_{m,n} \gamma^0\gamma^1(\Psi_{m+1,n}-\Psi_{m,n})+\Psi^\dagger_{m,n} \gamma^0\gamma^2(\Psi_{m,n+1}-\Psi_{m,n})\right)-h.c.\right) \\ 
++m  \Psi_{m,n}^\dagger\gamma^0 \Psi_{m,n}\,. 
+\end{multline}
 The correlators are
 \begin{equation}
 \langle \Psi^\dagger_{i,k}\Psi_{j,l}\rangle=\frac{1}{2}\delta_{i,j}\delta_{k,l}+\int_{-\pi}^\pi dx\, \int_{-\pi}^\pi dy\, \frac{m \gamma^0+\sin( x)\gamma^0 \gamma^1+\sin( y)\gamma^0\gamma^2}{8 \pi^2 \sqrt{m^2+\sin^2( x)+\sin^2( y)}} e^{ i (x (i-j)+y (k-l))}\,.
@@ -1853,6 +1897,8 @@ Other interesting research subjects include the treatment of excitations, which 
  \section*{Acknowledgments}
 We thank P. Calabrese, J. Cardy and B. Doyon for their kind invitation to collaborate with this review to a special issue on {\sl Entanglement entropy in extended quantum systems} in Journal of Physica A. 
  We also thank Cesar Fosco for many fruitful discussions. This work was financially supported by CONICET, ANPCyT and UNCuyo. 
+ 
+\raggedright
 \begin{thebibliography}{99}
 
 %introductiom
