--- a/0905.2562v3/review3.tex
+++ b/0905.2562v3/review3.tex
@@ -467,10 +467,11 @@ M&=&\frac{1}{4} \alpha^{-1\,T} \,\epsilon \,\alpha^{-1}=P\,\frac{1}{2 C}\log\lef
 N&=&\alpha \,\epsilon \,\alpha^T=\frac{1}{2 C}\log\left(\frac{C+\frac{1}{2}}{C-\frac{1}{2}}\right)\,X\,,
 \end{eqnarray}
 with $\epsilon$ the diagonal matrix of the $\epsilon_k$. The entropy is given by
-\begin{equation}
-S=\sum_l \left(-\log (1-e^{-\epsilon _{l}})+\frac{\epsilon _{l}\, e^{-\epsilon _{l}}}{
-1-e^{-\epsilon _{l}}}\right)=\textrm{tr}\left(( C+1/2)\log (C+1/2)-(C-1/2)\log (C-1/2)\right)\,,  \label{for}
-\end{equation}
+\begin{align}
+S &=\sum_l \left(-\log (1-e^{-\epsilon _{l}})+\frac{\epsilon _{l}\, e^{-\epsilon _{l}}}{
+1-e^{-\epsilon _{l}}}\right)\nn\\
+&=\textrm{tr}\left(( C+1/2)\log (C+1/2)-(C-1/2)\log (C-1/2)\right)\,,  \label{for}
+\end{align}
 which is positive thanks to  $C >1/2$, eq. (\ref{popo}). We also have
 \begin{equation} 
 \log (\textrm{tr}\rho^n)=-\textrm{tr}\left[ \log\left((C+1/2)^n-(C-1/2)^n\right)\right]\,.
